--- a/src/Componenrts/Common/Nav.css
+++ b/src/Componenrts/Common/Nav.css
@@ -9,21 +9,29 @@
 li {
   list-style-type: none;
 }
+
+
 a {
   text-decoration: none !important;
   color: aliceblue;
 }
+
+
 a:hover{
 color: aliceblue !important;
 }
 
-.nav-container{
+nav{
   width :100%;
   height: 15vh;
-   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+  background-color: #0093E9;
+  background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+  background-size: cover;
   display: grid;
   align-items: center;
   grid-template-columns: 20rem 1fr  20rem;
+  position: sticky;
+  top:0;
 }
 .main-logo{
    font-weight: 700;
