--- a/src/Componenrts/Projects/Projects.css
+++ b/src/Componenrts/Projects/Projects.css
@@ -1,16 +1,15 @@
-.Projects{
+#projects{
     width: 80%;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin: 7rem auto 0px 
+    margin: 0rem auto 0px;
+    padding-top: 6rem;
 }
 .switches{
     display: flex;
     gap:  2rem;
-    
-    
 }
 .switches button{
     padding: 5px 20px;
@@ -20,18 +19,15 @@
     border-radius: 10px;
     color: black;
     background-color: white;
-
 }
 .projects-container{
-
     width: 80%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     border-radius: 20px;
     border: 2px solid black;
     margin-top: 23px;
-    
-    }
+ }
 
 .project1{
     background-color: #0093E9;
@@ -67,8 +63,8 @@
 }
 p{
     color: #2b3030;
-    font-family: Onest, sans-serif !important;
-    font-size: 1.3rem;
+    font-family: #5b6b6b !important;
+    font-size: 1.6rem;
     font-weight: 400;
     line-height: 1.625em
 } 
